--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,22 +1,22 @@
 ---
-import Counter from "./Counter";
+import Counter from "./Counter.jsx";
 import HeaderButton from "./HeaderButton.astro";
 ---
 
 <header class="py-8 px-4 mx-auto max-w-5xl lg:py-16 lg:px-6">
   <div class="mx-auto text-center mb-8 lg:mb-16">
     <h2 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
-      SpaceX launches
+      Atro Page whit JSX counter 
     </h2>
     <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
-      All the information about SpaceX launches
+      By Matias Tari
     </p>
   </div>
   <Counter transition:persist client:visible />
   <nav
-    class="flex flex-col items-center justify-between w-full text-center md:flex-row"
+    class="flex flex-col items-center justify-between text-center md:flex-row"
   >
-    <HeaderButton  class="text-white">
+    <HeaderButton class="text-white">
       <svg
         slot="before"
         width="24"
@@ -32,9 +32,9 @@ import HeaderButton from "./HeaderButton.astro";
         ></path><path d="M7 14a6 6 0 0 0 -3 6a6 6 0 0 0 6 -3"></path><path
           d="M15 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path></svg
       >
-      Ultimos Lanzamientos
+      Proyectos
     </HeaderButton>
-    <HeaderButton  class="text-white">
+    <HeaderButton class="text-white">
       <svg
         slot="before"
         width="24"
@@ -49,9 +49,27 @@ import HeaderButton from "./HeaderButton.astro";
           d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path><path d="M12 9h.01"
         ></path><path d="M11 12h1v4h1"></path></svg
       >
-      Sobre el proyecto
+      Ejemplo
     </HeaderButton>
-    
-    <HeaderButton>Los mas viejos</HeaderButton>
+
+    <HeaderButton>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="icon icon-tabler icon-tabler-world"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="1.25"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+          d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path><path d="M3.6 9h16.8"
+        ></path><path d="M3.6 15h16.8"></path><path d="M11.5 3a17 17 0 0 0 0 18"
+        ></path><path d="M12.5 3a17 17 0 0 1 0 18"></path></svg
+      >
+      Ejemplo
+    </HeaderButton>
   </nav>
 </header>
