--- a/src/components/launches.astro
+++ b/src/components/launches.astro
@@ -7,7 +7,7 @@
 ---
 
 
-<div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+<div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 {
     launches.map( (launch) => (
         <CardLaunch id={launch.id} img={launch.links.patch.small} details={launch.details} success={launch.success}></CardLaunch>
