--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		<ViewTransitions/>
 	</head>
-	<body class="bg-gray-900 min-h-screen pb-32">
+	<body class="bg-gray-900 min-h-screen pb-32 w-full">
 		<Header/>
-		<main class="max-w-5xl px-4 m-auto">
+		<main class="max-w-screen-2xl px-4 m-auto flex flex-col justify-center items-center">
 				<slot />
 		</main>
 	</body>
